fix: use env vars for DB, port, and CORS origins for Render deployment